syntax = "proto3";

package common.v1;

option go_package = "github.com/example/backend/generated/go/common/v1";

// Common types shared between frontend and backend

message User {
  string id = 1;
  string email = 2;
  string name = 3;
  UserStatus status = 4;
  int64 created_at = 5;
  int64 updated_at = 6;
}

message UserProfile {
  string first_name = 1;
  string last_name = 2;
  string bio = 3;
  string avatar_url = 4;
  string location = 5;
  string timezone = 6;
}

enum UserStatus {
  USER_STATUS_UNSPECIFIED = 0;
  USER_STATUS_ACTIVE = 1;
  USER_STATUS_INACTIVE = 2;
  USER_STATUS_SUSPENDED = 3;
}

message PaginationRequest {
  int32 page_size = 1;
  string page_token = 2;
  string order_by = 3;
}

message PaginationResponse {
  string next_page_token = 1;
  int64 total_count = 2;
}